# spotifyWebApi

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  browse.c  cmd.c  cmd.h  mysql.c  mysql.h  playlist.c  search.c  sp_mysql.c  sp_mysql.h  spshell.c  spshell.h  spshell_posix.c  toplist.c
cmake/modules/: FindJansson.cmake  FindMySqlClient.cmake
